WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81194
Can't swipe to go back/forward when the current page is a PDF document
https://bugs.webkit.org/show_bug.cgi?id=81194
Summary
Can't swipe to go back/forward when the current page is a PDF document
Anders Carlsson
Reported
2012-03-14 23:26:28 PDT
Can't swipe to go back/forward when the current page is a PDF document
Attachments
Patch
(6.50 KB, patch)
2012-03-14 23:29 PDT
,
Anders Carlsson
sam
: review+
kdecker
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-03-14 23:29:47 PDT
Created
attachment 131993
[details]
Patch
Alexey Proskuryakov
Comment 2
2012-03-14 23:50:02 PDT
Isn't this part of <
rdar://problem/4347183
>?
Alexey Proskuryakov
Comment 3
2012-03-14 23:51:53 PDT
OK, I see the relationship between that and <
rdar://problem/6954125
> now. Was confused because this bug didn't have InRadar keyword.
mitz
Comment 4
2012-03-14 23:52:32 PDT
Comment on
attachment 131993
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=131993&action=review
> Source/WebKit2/UIProcess/API/mac/PDFViewController.mm:499 > + if ((deltaX > 0 && !page()->canGoBack()) || (deltaX < 0 && !page()->canGoForward()))
Are there other places in WebKit2 where there is such a mapping between horizontal directions and back and forward? This seems like the wrong level to make this mapping. For example, a client configured for right-to-left reading may want the reverse mapping.
Build Bot
Comment 5
2012-03-15 01:37:53 PDT
Comment on
attachment 131993
[details]
Patch
Attachment 131993
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/11954541
Anders Carlsson
Comment 6
2012-03-15 11:51:01 PDT
(In reply to
comment #4
)
> (From update of
attachment 131993
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=131993&action=review
> > > Source/WebKit2/UIProcess/API/mac/PDFViewController.mm:499 > > + if ((deltaX > 0 && !page()->canGoBack()) || (deltaX < 0 && !page()->canGoForward())) > > Are there other places in WebKit2 where there is such a mapping between horizontal directions and back and forward? This seems like the wrong level to make this mapping. For example, a client configured for right-to-left reading may want the reverse mapping.
We check the same thing in the web process in two places, I don't really see a good way to share the code between them.
Sam Weinig
Comment 7
2012-03-15 14:07:06 PDT
Comment on
attachment 131993
[details]
Patch Please fix the build before landing.
Anders Carlsson
Comment 8
2012-03-15 14:16:29 PDT
Committed
r110885
: <
http://trac.webkit.org/changeset/110885
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug