Can't swipe to go back/forward when the current page is a PDF document https://bugs.webkit.org/show_bug.cgi?id=81194 <rdar://problem/6954125>

Reviewed by Sam Weinig.

Override -[PDFViewScrollView scrollWheel:] and have the new implementation call
-[WKPDFView forwardScrollWheelEvent:] when the PDF is pinned to either the left or right side.
WKPDFView will then call PDFController::forwardScrollWheelEvent which checks if we can go back or forward,
and passes the event along to the WKView which ends up triggering the swiping machinery in Safari.

* UIProcess/API/mac/PDFViewController.h:
* UIProcess/API/mac/PDFViewController.mm:
(-[WKPDFView forwardScrollWheelEvent:]):
(WebKit):
(WebKit::PDFViewController::forwardScrollWheelEvent):
(WebKit::findEnclosingWKPDFView):
(WebKit::PDFViewScrollView_scrollWheel):
(WebKit::PDFViewController::pdfKitBundle):
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didCommitLoadForFrame):

Canonical link: https://commits.webkit.org/98447@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110885 268f45cc-cd09-0410-ab3c-d52691b4dbfc