Source/WebKit2/UIProcess/API/mac/PDFViewController.h
@@ -62,6 +62,8 @@ public:
 
     static Class pdfPreviewViewClass();
 
+    bool forwardScrollWheelEvent(NSEvent *);
+
     NSPrintOperation *makePrintOperation(NSPrintInfo *);
     void openPDFInFinder();
     void savePDFToDownloadsFolder();
